--- a/day-069/style.css
+++ b/day-069/style.css
@@ -40,7 +40,7 @@
 	left: 25px;
 	width: 40px;
 	height: 40px;
-	background-color: #1e293b;
+	background-color: #334155;
 	border-radius: 100%;
 	border: 36px solid #f8fafc;
 	animation: eye-movement 6s ease-in-out infinite;
